syntax = "proto3";

option go_package = "github.com/s77rt/rdpcloud/proto/go/models/fileio";

package models.fileio;

message User {
	string username = 1;
}

message User_1 {
	string username = 1;
}
