syntax = "proto3";

option go_package = "github.com/s77rt/rdpcloud/proto/go/services/termserv";

package services.termserv;

import "services/termserv/remote_desktop_services_api.proto";

service Termserv {
	rpc LogoffUser(LogoffUserRequest) returns (LogoffUserResponse) {}
	rpc LogoffMyUser(LogoffMyUserRequest) returns (LogoffMyUserResponse) {}
}
